Fix the modal alignment

--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,29 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  flex-shrink: 0;
+  padding: 10px;
+  gap: 10px;
+}
+
+.text{
+  padding: 0px 12px 0px 0px;
+}
+
+.left, .right{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.head{
+  display: flex;
+  justify-content: space-between;
+  margin: 0;
+  font-weight: bold;
+  align-items: center;
+  font-size: 20px;
 }
 
 .icon {
